2017-06-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c (read_block): Reset current_line_num after
	  processing config_overrides

2017-05-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (tape_action): Use a new tape if it lost less
	  tape space

2017-05-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/runtar.c: Accept --verbose argument

2017-03-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/ndmp-device.c (write_from_connection_impl,
	  read_to_connection_impl): Do not overflow length

2017-02-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/ndmp-device.c (read_to_connection_impl):Correctlycompute
	  the offset

2017-02-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/infofile.c (read_txinfofile): Fix returning error when
	  reading last history

2017-01-30  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/krb5-security.c (krb5_accept): Check result of setreuid

2017-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer/robot.pm: Add 'use Carp;' in
	  Amanda::Changer::robot::Interface::MTX package

2016-12-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/tapefile.c (lookup_last_reusable_tape): correctly check
	  pool and label

2016-12-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/make_security_file.c: Fix comment in amanda-security.conf

2016-11-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Correctly handle Region not found
	* device-src/s3.h: Add S3_ERROR_Region_Not_Found

2016-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Verify a publicURL is found

2016-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: publicURl and region can be unordered

2016-11-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Use the publicURL from the good region
